Closed Bug 1581656 Opened 5 years ago Closed 5 years ago

Default UBSAN_OPTIONS not set in gtest builds

Categories

(Firefox Build System :: General, defect)

defect
Not set
normal

Tracking

(firefox71 fixed)

RESOLVED FIXED
mozilla71
Tracking Status
firefox71 --- fixed

People

(Reporter: tsmith, Assigned: tsmith)

References

Details

Attachments

(1 file)

Default UBSAN_OPTIONS[1][2] do not get set properly in gtest builds. This does not seem to be a problem for the regular Firefox builds. I noticed this because print_stacktrace=1 was not working in gtest builds. Setting it manually at runtime does work.

[1] https://searchfox.org/mozilla-central/rev/7ed8e2d3d1d7a1464ba42763a33fd2e60efcaedc/mozglue/build/UbsanOptions.cpp#10
[2] https://searchfox.org/mozilla-central/source/media/webrtc/trunk/webrtc/build/sanitizers/sanitizer_options.cc#175

Assignee: nobody → twsmith
Keywords: checkin-needed
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: