Bug 1581656 - Fix default UBSAN_OPTIONS. r=froydnj

Differential Revision: https://phabricator.services.mozilla.com/D46970