mozglue/build/UbsanOptions.cpp
@@ -7,6 +7,8 @@
 
 #ifndef _MSC_VER  // Not supported by clang-cl yet
 
-const char* __ubsan_default_options() { return "print_stacktrace=1"; }
+extern "C" const char* __ubsan_default_options() {
+  return "print_stacktrace=1";
+}
 
 #endif
